--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,4 +30,5 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run dockerfile
         run: |
-          docker build Dockerfile -t nginx:alpine
+          docker build Srujan-DiagonalMatrix/docker-autobuild-demo/Dockerfile -t nginx:alpine
+
